# phala-cloud

./: .commitlintrc.json  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  TASK.md  changelog.config.js  package.json
.github/PULL_REQUEST_TEMPLATE/: cli.md  docs.md  js_sdk.md  templates.md
.github/workflows/: cli-checks.yml  cli-publish.yml  docs-validation.yml  package-release.yml  pr-checks.yml  pr-comment.yml  pr-lint.yml  release-command.yml  release-python.yml
cli/: .env.example  .gitignore  CHANGELOG.md  COMMANDS.md  LICENSE  README.md  biome.json  bun.lockb  package-lock.json  package.json  tsconfig.json  tsup.config.ts
cli/docs/: README.md  api.md  apps.md  completion.md  config.md  cp.md  cvms.md  deploy.md  docker.md  instance-types.md  link.md  login.md  logout.md  logs.md  ps.md  (+10 more)
docs/: CHANGELOG.md  api-cvm-compose-updates.md  api-deployment-guide.md  api-versioning.md  cvm-state-monitoring.md  phala-toml-configuration.md  sdk-error-handling.md
js/: CHANGELOG.md  package.json  tsconfig.json  vitest.config.mts
phala-docs/: docs.json  index.mdx
python/: Makefile  README.md  pyproject.toml
python/examples/: repl.py
python/src/phala_cloud/: __init__.py  action_responses.py  actions.py  blockchains.py  client.py  errors.py  full_client.py  result.py  utils.py
python/src/phala_cloud/models/: __init__.py  auth.py  base.py  cvms.py  kms.py  nodes.py
python/tests/: test_action_matrix_async.py  test_action_matrix_sync.py  test_actions_module.py  test_client_async.py  test_client_sync.py  test_e2e_all_interfaces.py
scripts/: bump-python-version.py  bump-version.js
templates/: config.json
(+487 files in other folders)
