[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "phala-cloud"
version = "0.1.1"
description = "Python SDK for Phala Cloud API (sync/async, pydantic, REPL-friendly)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Phala Network" }]
keywords = ["phala", "cloud", "sdk", "tee", "cvm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "dstack-sdk>=0.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/Phala-Network/phala-cloud"
Repository = "https://github.com/Phala-Network/phala-cloud"
Issues = "https://github.com/Phala-Network/phala-cloud/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/phala_cloud"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
  "e2e: end-to-end tests against real API base URL",
]
